# Forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  rust_auth_actor_system_blueprint.md  rust_backend_framework_blueprint.md  rust_forge_framework_gaps_blueprint.md  rust_forge_framework_improvements_blueprint.md  rust_job_system_blueprint.md  rust_query_system_blueprint_v_1_v_3.md  rust_storage_system_blueprint_framework_level.md  rust_websocket_system_blueprint.md
bindings/: AliasedEnum.ts  CountryStatus.ts  CustomIdEnum.ts  JobHistoryStatus.ts  OrderStatus.ts  OrderStatusWithOverrides.ts  SettingType.ts  UserStatus.ts
blueprints/: 00-master-backend-framework.md  06-datatable-system.md  07-email-system.md  08-app-builder-service-provider.md  09-remaining-preparation.md  10-app-enum-system.md  11-framework-improvements.md  15-framework-gaps.md  16-production-hardening.md  17-framework-models-image-module.md  19-plugin-system-v2.md
database/migrations/: 000000000000_create_database_primitives.rs  000000000008_create_countries.rs  000000000009_create_settings.rs  000000000010_create_audit_logs.rs  202604101530_create_users.rs  202604101531_create_profiles.rs
database/seeders/: 000000000001_countries_seeder.rs  admin_users_seed.rs  users_seed.rs
docs/: api-reference.md  datatable-blueprint-status.md  query-blueprint-status.md  release-checklist.md  validation-rules.md
docs/api/: index.md  root.md
docs/guides/: README.md  auth.md  background-processing.md  caching-and-redis.md  (+13 more)
examples/: blueprint_http.rs  blueprint_typed.rs  phase25_auth.rs  phase2_websocket.rs  phase3_database_generic.rs  phase3_database_many_to_many.rs  phase3_database_model.rs  phase3_database_projection.rs  phase3_database_relations.rs  phase3_observability.rs  phase3_plugin.rs  phase3_redis.rs  phase3_worker.rs  phase4_database_lifecycle.rs
forge-build/: Cargo.toml
forge-macros/: Cargo.toml
forge-macros/src/: app_enum.rs  common.rs  lib.rs  model.rs  openapi.rs  projection.rs  typescript.rs  validate.rs
src/: lib.rs  prelude.rs
tests/: acceptance.rs  api_audit.rs  audit_acceptance.rs  auth_acceptance.rs  database_acceptance.rs  database_lifecycle_acceptance.rs  datatable_acceptance.rs  distributed_runtime_acceptance.rs  http_authorization_acceptance.rs  observability_acceptance.rs  phase2_acceptance.rs  plugin_acceptance.rs  token_acceptance.rs  validate_derive_acceptance.rs  websocket_observability_acceptance.rs
tests/fixtures/plugin_consumer_app/: Cargo.toml
tests/fixtures/plugin_consumer_app/src/: main.rs
tests/fixtures/plugin_consumer_app/src/app/: providers.rs
tests/fixtures/plugin_consumer_app/src/bootstrap/: app.rs
tests/fixtures/plugin_consumer_app/tests/: plugin_bootstrap.rs
(+238 files in other folders)
