[package]
name = "forge-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Proc-macro derives for Forge database model and projection metadata."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
